@@ -1,4 +1,5 @@
 {{$NEXT}}
+  - Regenerated files no longer need to be allowed in [Git::Check] and [Git::Commit] on release
 
 0.027     2016-09-29 13:50:21 EDT
   - Use [Regenerate] instead of [CopyFilesFromBuild] to regenerate files in root
